--- a/main.html
+++ b/main.html
@@ -16,14 +16,86 @@
                <img class="searchIcon" src="./resources/search.png" alt="searchIcon">
             </button>
          </div>
-         <div class="row">
+         <div class="row" onclick="signup()">
             <img class="" src="resources/circle-user-round.svg" alt="userIcon">
-            <p>Login</p>
+            <p>Sign up</p>
          </div>
       </nav>
    </header>
-   <h1>This is a Heading</h1>
-   <p>This is a paragraph.</p>
+   <body>
+      <div class="column" id="padding">
+         <p>Latest Games</p>
+         <div class="cardRow">
+            <div class="gameCard">
+               <img class="gameImage" src="resources/snake.jpg" alt="Snake">
+               <div class="pcollection">
+                  <p>Name</p>
+                  <p>Tags</p>
+                  <p>Description</p>
+               </div>
+            </div>
+            <div class="gameCard">
+               <img class="gameImage" src="resources/ape.jpg" alt="Ape">
+               <div class="pcollection">
+                  <p>Name</p>
+                  <p>Tags</p>
+                  <p>Description</p>
+               </div>
+            </div>
+            <div class="gameCard">
+               <img class="gameImage" src="resources/hedgehog.jpg" alt="hedgehog">
+               <div class="pcollection">
+                  <p>Name</p>
+                  <p>Tags</p>
+                  <p>Description</p>
+               </div>
+            </div>
+            <div class="gameCard">
+               <img class="gameImage" src="resources\angrybird.png" alt="Snake">
+               <div class="pcollection">
+                  <p>Name</p>
+                  <p>Tags</p>
+                  <p>Description</p>
+               </div>
+            </div>
+         </div>
 
+         <p>Popular Games</p>
+         <div class="cardRow">
+            <div class="gameCard">
+               <img class="gameImage" src="resources/snake.jpg" alt="Snake">
+               <div class="pcollection">
+                  <p>Name</p>
+                  <p>Tags</p>
+                  <p>Description</p>
+               </div>
+            </div>
+            <div class="gameCard">
+               <img class="gameImage" src="resources/ape.jpg" alt="Ape">
+               <div class="pcollection">
+                  <p>Name</p>
+                  <p>Tags</p>
+                  <p>Description</p>
+               </div>
+            </div>
+            <div class="gameCard">
+               <img class="gameImage" src="resources/hedgehog.jpg" alt="hedgehog">
+               <div class="pcollection">
+                  <p>Name</p>
+                  <p>Tags</p>
+                  <p>Description</p>
+               </div>
+            </div>
+            <div class="gameCard">
+               <img class="gameImage" src="resources\angrybird.png" alt="Snake">
+               <div class="pcollection">
+                  <p>Name</p>
+                  <p>Tags</p>
+                  <p>Description</p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </body>
 </body>
 </html>
