--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html>
+
+
 <head>
    <link rel="stylesheet" type="text/css" href="./styles/global.css">
 </head>
 <body>
    <header>
+      <div class = "offscreen">
+         <ul>
+            <li>Browse Games</li>
+            <li>My Library</li>
+            <li>Upload Games</li>
+            <li>Learn HTML/Java</li>
+         </ul>
+      </div>
       <nav>
          <div class="row">
+            <div class = "ham-menu">
+               <span></span>
+               <span></span>
+               <span></span>
+            </div>
             <img class="webIcon" src="./resources/cartridge.jpg" alt="cartridge">
             <p>Whatever Games</p>
          </div>
@@ -96,6 +111,7 @@
             </div>
          </div>
       </div>
+      <script src="./javascript/mainhtml.js"></script>
    </body>
 </body>
 </html>
