--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html>
 <head>
    <link rel="stylesheet" type="text/css" href="./styles/global.css">
+   
 </head>
 <body>
    <header>
@@ -22,8 +23,26 @@
          </div>
       </nav>
    </header>
-   <h1>This is a Heading</h1>
-   <p>This is a paragraph.</p>
+   <h1>Манай хуудсанд тавтай морил.</h1>
+   <p>Энэ бол main хуудас.</p>
 
+
+   <footer>
+      <div class="footer-container">
+        <div class="social-icons">
+          <a href="#" class="social-icon">
+            <img src="./resources/facebook.png" alt="Facebook">
+          </a>
+          <a href="#" class="social-icon">
+            <img src="./resources/twitter.png" alt="X (Twitter)">
+          </a>
+        </div>
+        <div class="footer-links">
+          <a href="/about">About</a>
+          <a href="/faq">FAQ</a>
+          <a href="/contact">Contact Us</a>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
