--- a/sub_pages/game.html
+++ b/sub_pages/game.html
@@ -39,8 +39,14 @@
             </div>
         </nav>
     </header>
+    
+    <div class="contain">
+        <div class="line">
+        </div>
+    </div>
 
     <div class="column">
+        
         <img class="gamePart" src="../resources/screenshot/snake.png"/>
         <div class="endRow">
             <p>Snake</p>
