--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
                   <!-- <p>Description</p> -->
                </div>
             </div>
-            <div class="gameCard">
+            <div class="gameCard" onclick="changeToGame()">
                <img class="gameImage" src="resources/snake.jpg" alt="Snake">
                <div class="pcollection">
                   <p>Snake</p>
-                  <p class="tags">Tags</p>
-                  <!-- <p>Description</p> -->
+                  <p class="tags">2D, Puzzle</p>
+                  <!-- <p></p> -->
                </div>
             </div>
             
