--- a/sub_pages/library.html
+++ b/sub_pages/library.html
@@ -48,46 +48,50 @@
                 <div class="gameCard" onclick="changeToGame()">
                     <img class="gameImage" src="../resources/snake.jpg" alt="Snake">
                     <div class="pcollection">
-                    <p>Snake</p>
-                    <p>Plays: 240</p>
+                        <p>Snake</p>
+                        <p>Plays: 240</p>
+                        <div class="row">
+                            <p>Earnings: </p>
+                            <p class="earnings">450$</p>
+                        </div>
                     </div>
                 </div>
             </div>
     
             <p>Played Games</p>
             <div class="cardRow">
-                <div class="gameCard">
+                <div class="gameCard" onclick="changeToGame()">
                     <img class="gameImage" src="../resources/snake.jpg" alt="Snake">
                     <div class="pcollection">
-                    <p>Name</p>
-                    <p>Tags</p>
-                    <p>Description</p>
+                       <p>Snake</p>
+                       <p class="tags">2D, Puzzle</p>
+                       <!-- <p></p> -->
                     </div>
-                </div>
+                 </div>
                 <div class="gameCard">
                     <img class="gameImage" src="../resources/ape.jpg" alt="Ape">
                     <div class="pcollection">
-                    <p>Name</p>
-                    <p>Tags</p>
-                    <p>Description</p>
+                       <p>Ape out</p>
+                       <p class="tags">Action</p>
+                       <!-- <p>Description</p> -->
                     </div>
                 </div>
                 <div class="gameCard">
                     <img class="gameImage" src="../resources/hedgehog.jpg" alt="hedgehog">
                     <div class="pcollection">
-                    <p>Name</p>
-                    <p>Tags</p>
-                    <p>Description</p>
+                       <p>Sonic</p>
+                       <p class="tags">Platform</p>
+                       <!-- <p>Description</p> -->
                     </div>
                 </div>
                 <div class="gameCard">
-                    <img class="gameImage" src="../resources\angrybird.png" alt="Snake">
+                    <img class="gameImage" src="..\resources\angrybird.jpg" alt="Snake">
                     <div class="pcollection">
-                    <p>Name</p>
-                    <p>Tags</p>
-                    <p>Description</p>
+                       <p>Angrybird</p>
+                       <p class="tags">Puzzle</p>
+                       <!-- <p>Description</p> -->
                     </div>
-                </div>
+                 </div>
             </div>
         </div>
 
