--- a/uploadgame.html
+++ b/uploadgame.html
@@ -3,7 +3,7 @@
 <head>
     <title>Upload Game</title>
     <link rel="stylesheet" type="text/css" href="./styles/uploadgame.css">
-    <link rel="stylesheet" type="text/css" href="./styles/global.css">
+    <link rel="stylesheet" type="text/css" href="./styles/global1.css">
 </head>
 <body>
    <header>
