--- a/adupload.html
+++ b/adupload.html
@@ -3,7 +3,7 @@
 <head>
     <title>Ad Upload</title>
     <link rel="stylesheet" type="text/css" href="./styles/adupload.css">
-    <link rel="stylesheet" type="text/css" href="./styles/global.css">
+    <link rel="stylesheet" type="text/css" href="./styles/global1.css">
 </head>
 <body>
    <header>
