--- a/sub_pages/library.html
+++ b/sub_pages/library.html
@@ -100,5 +100,23 @@
         
        <script src="../javascript/library.js"></script>
     <!-- </body> -->
- </body>
+</body>
+
+<footer>
+    <div class="footer-container">
+    <div class="social-icons">
+        <a href="#" class="social-icon">
+        <img src="../resources/facebook.png" alt="Facebook">
+        </a>
+        <a href="#" class="social-icon">
+        <img src="../resources/twitter.png" alt="X (Twitter)">
+        </a>
+    </div>
+    <div class="footer-links">
+        <a href="/about">About</a>
+        <a href="/faq">FAQ</a>
+        <a href="/contact">Contact Us</a>
+    </div>
+    </div>
+</footer>
 </html>
