--- a/sub_pages/login.html
+++ b/sub_pages/login.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="./styles/login.css">
-    <link rel="stylesheet" type="text/css" href="./styles/global1.css">
+    <link rel="stylesheet" href="../styles/login.css">
+    <link rel="stylesheet" type="text/css" href="../styles/global1.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="row">
-                <img class="webIcon" src="./resources/cartridge.jpg" alt="cartridge">
-                <p>Whatever Games</p>
+                <!-- <div class = "ham-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                 </div> -->
+                <img onclick="changeToMain()" class="webIcon" src="../resources/cartridge.jpg" alt="cartridge">
+                <p onclick="changeToMain()">Whatever Games</p>
             </div>
             <div class="searchBar">
                 <input type="text" placeholder="Search for games">
                 <button>
-                    <img class="searchIcon" src="./resources/search.png" alt="searchIcon">
+                    <img class="searchIcon" src="../resources/search.png" alt="searchIcon">
                 </button>
             </div>
             <div class="row">
-                <img class="" src="resources/circle-user-round.svg" alt="userIcon">
+                <img class="" src="../resources/circle-user-round.svg" alt="userIcon">
                 <p>Login</p>
             </div>
         </nav>
@@ -48,7 +53,7 @@
             
             <div class="divider"></div>
             
-            <div class="business-login">
+            <div class="business-login" onclick="busLogin()">
                 <button class="button">Business</button>
             </div>
         </div>
@@ -58,10 +63,10 @@
         <div class="footer-container">
             <div class="social-icons">
                 <a href="#" class="social-icon">
-                    <img src="./resources/facebook.png" alt="Facebook">
+                    <img src="../resources/facebook.png" alt="Facebook">
                 </a>
                 <a href="#" class="social-icon">
-                    <img src="./resources/twitter.png" alt="X (Twitter)">
+                    <img src="../resources/twitter.png" alt="X (Twitter)">
                 </a>
             </div>
             <div class="footer-links">
@@ -71,5 +76,7 @@
             </div>
         </div>
     </footer>
+    <script src="../javascript/mainhtml.js"></script>
 </body>
+
 </html>
